修复Java 11兼容性问题：替换Stream.toList()